add GC log